# kobra-partner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: full_surface.py  mock_partner.py  quickstart.py
scripts/: release.sh
src/kobra_partner/: __init__.py  _http.py  client.py  errors.py  resources.py
tests/: test_client_against_app.py  test_client_unit.py  test_full_surface_example.py
